--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "visual-nuts",
   "version": "1.0.0",
   "description": "Visual Algorithmy exercises",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "print": "node src/print-numbers.js"
   },
   "keywords": [
     "visual-nuts",
